--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="assets/images/logo.png" alt="Apptastico">
         </div>
         <nav>
-            <a href="#">Home</a>
+            <a class="raro" href="#">Home</a>
             <a href="#">About</a>
             <a href="#">Work</a>
             <a href="#">Contact</a>
